--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <body>
     <a class="title" href="/">Stats<sup class="red">2</sup></a>
     <ul>
-      <li>Total requests in Stats<sup class="red">2</sup>: {{ total_requests }}</li>
+      <li>Requests: {{ total_requests }}</li>
       <li><a href="http://instance3:8080/job/Stats2Update/lastBuild/">Last Jenkins job</a></li>
       <li><a href="https://github.com/justinasr/Stats2/tree/dev">GitHub</a></li>
     </ul>
@@ -19,7 +19,7 @@
         <th>Links</th>
         <th>Total/Done events</th>
         <th>PrepID</th>
-        <th>Campaign</th>
+        <th>Campaigns</th>
         <th>Output datasets</th>
       </tr>
       {% for request in requests %}
@@ -68,7 +68,12 @@
             </ul>
           </td>
           <td><a href="/1?prepid={{ request.PrepID }}">{{ request.PrepID | replace("task_", "") }}</a></td>
-          <td><a href="/1?campaign={{ request.Campaign }}">{{ request.Campaign }}</a></td>
+          <td>
+            <ul class="no-bullets">
+              {% for campaign in request.Campaigns %}
+                <li><a href="/1?campaign={{ campaign }}">{{ campaign }}</a>&nbsp;<a href="/count_campaign/{{ campaign }}">Statistics</a></li>
+              {% endfor %}
+          </td>
           <td>
             <ul class="no-bullets">
               {% for dataset in request.OutputDatasets %}
