--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,9 @@
     <a class="title" href="/">Stats<sup class="red">2</sup></a>
     <ul>
       <li>Total requests in Stats<sup class="red">2</sup>: {{ total_requests }}</li>
-      <li><a href="http://instance3:8080/job/Stats2Update/lastBuild/">Last Jenkins job</a></li>
+      <li><a href="http://instance3:8080/job/Stats2%20Update/lastBuild/">Last Jenkins job</a></li>
       <li><a href="https://github.com/justinasr/Stats2/tree/dev">GitHub</a></li>
-      <li>Update time:<a href="http://instance3:8080/job/Stats2Update/buildTimeTrend"><br><img style="width:180px" src="http://instance3:8080/job/Stats2Update/buildTimeGraph/png"/></a></li>
+      <li>Update time:<a href="http://instance3:8080/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="http://instance3:8080/job/Stats2%20Update/buildTimeGraph/png"/></a></li>
     </ul>
     <table class="table" style="font-size: 12px">
       <tr style="font-size: 14px">
