--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <base href="/stats/">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.png">
@@ -8,43 +9,43 @@
     <title>Stats2</title>
   </head>
   <body>
-    <a class="title" href="/">Stats<sup class="red">2</sup></a>
+    <a class="title" href="/stats">Stats<sup class="red">2</sup></a>
     <ul>
       <li>Total workflows in Stats<sup class="red">2</sup>: {{ total_workflows }}</li>
-      <li><a href="http://instance3:8080/job/Stats2%20Update/lastBuild/">Last Jenkins job</a></li>
+      <li><a href="http://instance3.cern.ch/jenkins/job/Stats2%20Update/lastBuild/">Last Jenkins job</a></li>
       <li><a href="https://github.com/justinasr/Stats2">GitHub</a></li>
-      <li>Update time:<a href="http://instance3:8080/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="http://instance3:8080/job/Stats2%20Update/buildTimeGraph/png"/></a></li>
+      <li>Update time:<a href="http://instance3.cern.ch/jenkins/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="http://instance3.cern.ch/jenkins/job/Stats2%20Update/buildTimeGraph/png"/></a></li>
     </ul>
     <table class="table" style="font-size: 12px">
       <tr style="font-size: 14px">
         <th>Workflow</th>
         <th>Links</th>
         <th>Total/Done events</th>
-        <th>PrepID</th>
-        <th>Requests</th>
+        <th>PrepID of workflow</th>
+        <th>Requests (Tasks/Steps)</th>
         <th>Campaigns</th>
         <th>Output datasets</th>
       </tr>
       {% for workflow in workflows %}
         <tr>
-          <td>Name:&nbsp;<a href="/0?workflow_name={{ workflow.RequestName }}">{{ workflow.RequestName }}</a><br>
-              Type: <a href="/0?type={{ workflow.RequestType }}">{{ workflow.RequestType }}</a><br>
+          <td>Name:&nbsp;<a href="0?workflow_name={{ workflow.RequestName }}">{{ workflow.RequestName }}</a><br>
+              Type: <a href="0?type={{ workflow.RequestType }}">{{ workflow.RequestType }}</a><br>
               Priority: {{ workflow.RequestPriority }}<br>
               Last update: {{ workflow.LastUpdate | safe }}<br>
               {% if workflow.ProcessingString | length > 0 %}
-                  Processing string: <a href="/0?processing_string={{ workflow.ProcessingString }}">{{ workflow.ProcessingString }}</a><br>
+                  Processing string: <a href="0?processing_string={{ workflow.ProcessingString }}">{{ workflow.ProcessingString }}</a><br>
               {% endif %}
-              Last status: {{ workflow.LastStatus }}
+              Last status: {{ workflow.LastStatus | safe }}
           </td>
           <td>
             <ul class="no-bullets">
               <li><a href="https://cms-pdmv.cern.ch/mcm/workflows?prepid={{ workflow.PrepID | replace('task_', '') }}">McM</a></li>
               <li><a href="https://cms-pdmv.cern.ch/pmp/historical?r={{ workflow.PrepID | replace('task_', '') }}">Historical&nbsp;pMp</a></li>
               <li><a href="https://cmsweb.cern.ch/reqmgr2/data/request?name={{ workflow.RequestName }}">ReqMgr2&nbsp;JSON</a></li>
-              <li><a href="/update/{{ workflow._id }}">Update&nbsp;Now</a></li>
-              <li><a href="/view_json/{{ workflow._id }}">View&nbsp;JSON</a></li>
+              <li><a href="update/{{ workflow._id }}">Update&nbsp;Now</a></li>
+              <li><a href="get_json/{{ workflow._id }}">View&nbsp;JSON</a></li>
               <li><a href="https://cms-pdmv.cern.ch/stats/?ResToPrint=50&Page=1&Col=15-20-7-11-2-8-4-5-23-9&RN={{ workflow.RequestName }}">Workflow&nbsp;in&nbsp;Stats</a></li>
-              <li><a href="/0?workflow_name={{ workflow.RequestName }}&check=1">Check&nbsp;with&nbsp;Stats</a></li>
+              <li><a href="0?workflow_name={{ workflow.RequestName }}&check=1">Check&nbsp;with&nbsp;Stats</a></li>
             </ul>
           </td>
           <td>
@@ -78,23 +79,23 @@
               </li>
             </ul>
           </td>
-          <td><a href="/0?prepid={{ workflow.PrepID }}">{{ workflow.PrepID | replace("task_", "") }}</a></td>
+          <td><a href="0?prepid={{ workflow.PrepID }}">{{ workflow.PrepID }}</a></td>
           <td>
             <ul class="no-bullets">
               {% for request in workflow.Requests %}
-                <li><a href="/0?request={{ request }}">{{ request }}</a></li>
+                <li><a href="0?request={{ request }}">{{ request }}</a></li>
               {% endfor %}
           </td>
           <td>
             <ul class="no-bullets">
               {% for campaign in workflow.Campaigns %}
-                <li><a href="/0?campaign={{ campaign }}">{{ campaign }}</a></li>
+                <li><a href="0?campaign={{ campaign }}">{{ campaign }}</a></li>
               {% endfor %}
           </td>
           <td>
             <ul class="no-bullets">
               {% for dataset in workflow.OutputDatasets %}
-                <li>{% if dataset == workflow.LastDataset %}<b>{% endif %}<a href="/0?dataset={{ dataset }}">{{ dataset }}</a>{% if dataset == workflow.LastDataset %}</b>{% endif %}&nbsp;<a href="https://cms-pdmv.cern.ch/stats/?ResToPrint=50&Page=1&Col=15-20-7-11-2-8-4-5-23-9&DN={{ dataset }}">Stats</a>&nbsp;<a href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod%2Fglobal&input=dataset%3D{{ dataset }}">DAS</a></li>
+                <li>{% if dataset == workflow.LastDataset %}<b>{% endif %}<a href="0?dataset={{ dataset }}">{{ dataset }}</a>{% if dataset == workflow.LastDataset %}</b>{% endif %}&nbsp;<a href="https://cms-pdmv.cern.ch/stats/?ResToPrint=50&Page=1&Col=15-20-7-11-2-8-4-5-23-9&DN={{ dataset }}">Stats</a>&nbsp;<a href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod%2Fglobal&input=dataset%3D{{ dataset }}">DAS</a></li>
               {% endfor %}
             </ul>
           </td>
@@ -103,9 +104,9 @@
     </table>
     <div class="footer">
       <ul class="pagination justify-content-center">
-        <li class="page-item {% if not pages[1] %}disabled{% endif %}"><a class="page-link" href="/{{ pages[0] - 1 }}?{{ query }}">Previous</a></li>
+        <li class="page-item {% if not pages[1] %}disabled{% endif %}"><a class="page-link" href="{{ pages[0] - 1 }}?{{ query }}">Previous</a></li>
         <li class="page-item"><a class="page-link" href="#">{{ pages[0] }}</a></li>
-        <li class="page-item {% if not pages[2] %}disabled{% endif %}"><a class="page-link" href="/{{ pages[0] + 1 }}?{{ query }}">Next</a></li>
+        <li class="page-item {% if not pages[2] %}disabled{% endif %}"><a class="page-link" href="{{ pages[0] + 1 }}?{{ query }}">Next</a></li>
       </ul>
     </div>
   </body>
